home/Deployments/tzi/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tzi-ingress
  namespace: tzi-system
  annotations:
    kubernetes.io/ingress.class: nginx-exposed
spec:
  rules:
  - host: tzi.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tzi-svc
            port:
              number: 80
